solucion de bugs y autentificaciones